# fastapi-celery-redis

./: Dockerfile  README.md  docker-compose.yml  main.py  pyproject.toml  run-local.sh  tasks.py  test_api.py  utils.py
script/: start_redis_container.sh
src/: celery_worker.py  main.py  tasks.py
test/: test_create_task.py  test_fastapi_async.py
test.http/: get-task.http  start-task.http
