[tool.poetry]
name = "fastapi-app"
version = "1.0.0"
description = ""
authors = ["Stelios Giannikis <steliosgiannik@gmail.com>"]
readme = ""

[tool.poetry.dependencies]
python = "=3.10.12"
torch = "=2.2.0"
sentence-transformers = "=2.3.1"

[tool.poetry.group.dev.dependencies]

[build-system]
requires = ["poetry-core"]
build-backend = "poetry.core.masonry.api"
