[project]
name = "fastapi-celery-redis-flower"
version = "0.1.0"
description = "Add your description here"
readme = "README.md"
requires-python = ">=3.12"
dependencies = [
    "aio-celery[redis]>=0.20.0",
    "aiohttp>=3.12.6",
    "celery>=5.5.2",
    "celery-aio-pool>=0.1.0rc8",
    "celery-pool-asyncio>=0.2.0",
    "dotenv>=0.9.9",
    "eventlet>=0.40.0",
    "fastapi>=0.115.12",
    "flower>=2.0.1",
    "gevent>=25.5.1",
    "httpx>=0.28.1",
    "loguru>=0.7.3",
    "nest-asyncio>=1.6.0",
    "pytest>=8.3.5",
    "pytest-asyncio>=1.0.0",
    "redis>=6.2.0",
    "uvicorn>=0.34.2",
]
